--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.port=33746
 spring.data.mongodb.database=collectordb
 spring.data.mongodb.username=collector
 spring.data.mongodb.password=collector
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
